src/test/resources/de/feu/ps/bridges/serialization/semantic_errors/island_w_too_many_bridges.bgs
FIELD
11 x 8 | 3

ISLANDS
( 0, 0 | 1 )
( 0, 5 | 3 )
( 5, 5 | 2 )

BRIDGES
( 0, 1 | true )
( 1, 2 | true )
